---
title: Schema Conceptuala OLTP globala (Crow's foot, layout ortogonal ELK)
config:
  layout: elk
  look: classic
---
erDiagram
  ZONE {
    NUMBER_19 id PK
    VARCHAR2_40 cod_zona UK
    VARCHAR2_80 den_zona "NOT NULL"
    VARCHAR2_10 tip_zona "NOT NULL"
    NUMBER_19 parent_zona_id FK
  }
  AGENTI {
    NUMBER_19 id PK
    VARCHAR2_20 cod_agent UK
    VARCHAR2_100 nume_agent "NOT NULL"
    VARCHAR2_200 email
  }
  CLIENTI {
    NUMBER_19 id PK
    VARCHAR2_60 cod_client UK
    VARCHAR2_200 denumire_client "NOT NULL"
    VARCHAR2_12 tip_client "NOT NULL"
    NUMBER_19 id_zona FK
    DATE start_date "NOT NULL"
    DATE end_date "CHECK > start"
  }
  CLIENTI_CONTACTE {
    VARCHAR2_60 cod_client PK
    VARCHAR2_1000 email_client
    VARCHAR2_1000 email_agent
  }
  INTERVALE_PLATA {
    NUMBER_19 id PK
    VARCHAR2_60 den_interval UK
  }
  INTERVALE_PLATA_ZILE {
    NUMBER_19 id_interval PK
    VARCHAR2_40 per_zile PK
    NUMBER_10 zile_start "NOT NULL"
    NUMBER_10 zile_end
  }
  ZONE_AGENTI {
    NUMBER_19 id PK
    NUMBER_19 id_zona FK
    NUMBER_19 id_agent FK
    DATE start_date "NOT NULL"
    DATE end_date "CHECK > start"
  }
  ZONE_INTERVALE_PLATA {
    NUMBER_19 id PK
    NUMBER_19 id_zona FK
    NUMBER_19 id_interval FK
    DATE start_date "NOT NULL"
    DATE end_date "CHECK > start"
  }
  FISE_CLIENTI {
    NUMBER_19 id PK
    VARCHAR2_30 nr_document
    CHAR_3 doc_type_xrp
    CHAR_1 tip_doc "CHECK F,I"
    VARCHAR2_10 moneda
    DATE data_doc_efectiva "NOT NULL"
    DATE data_scad
    NUMBER_2 semn "CHECK -1,1"
    NUMBER_17_2 amount_doc "NOT NULL"
    NUMBER_17_2 amount_doc_ron
    VARCHAR2_60 cod_client FK
    VARCHAR2_200 denumire_client
    VARCHAR2_20 clasa_client
  }
  LINII_DOC {
    NUMBER_19 id PK
    CHAR_3 doc_type_xrp FK
    VARCHAR2_30 nr_document FK
    VARCHAR2_50 item_code FK
    NUMBER_13_2 item_qty
    NUMBER_9_2 xrp_linie_valoare_fara_tva
    NUMBER_9_2 xrp_linie_tva
  }
  MS_ITEMS {
    NUMBER_19 id PK
    VARCHAR2_50 item_code UK
    VARCHAR2_350 item_name "NOT NULL"
    VARCHAR2_1000 item_description
    NUMBER_19 brand_id FK
    NUMBER_19 season_id FK
    NUMBER_19 item_type_id FK
    NUMBER_19 category_id FK
    BINARY_DOUBLE vat
    NUMBER_9_2 last_cost_price
  }
  BRANDS {
    NUMBER_19 id PK
    VARCHAR2_3 code UK
    VARCHAR2_50 brand
    VARCHAR2_300 description
  }
  ITEMS_CATEGORY {
    NUMBER_19 id PK
    VARCHAR2_2 code UK
    VARCHAR2_50 category "NOT NULL"
    VARCHAR2_50 name "NOT NULL"
  }
  ITEMS_TYPE {
    NUMBER_19 id PK
    VARCHAR2_4 code UK
    VARCHAR2_200 item_type
    VARCHAR2_600 description
  }
  ITEMS_SEASONS {
    NUMBER_19 id PK
    VARCHAR2_120 code UK
    VARCHAR2_40 description
    VARCHAR2_8 season_year
    NUMBER_10 active "CHECK 0,1"
  }

  ZONE                ||--o{ CLIENTI              : "deserveste"
  ZONE                ||--o{ ZONE                 : "ierarhie"
  ZONE                ||--o{ ZONE_AGENTI          : ""
  AGENTI              ||--o{ ZONE_AGENTI          : ""
  ZONE                ||--o{ ZONE_INTERVALE_PLATA : ""
  INTERVALE_PLATA     ||--o{ ZONE_INTERVALE_PLATA : ""
  INTERVALE_PLATA     ||--|{ INTERVALE_PLATA_ZILE : "detaliaza"
  CLIENTI             ||--o| CLIENTI_CONTACTE    : "are contact"
  CLIENTI             ||--o{ FISE_CLIENTI        : "emite"
  FISE_CLIENTI        ||--o{ LINII_DOC           : "contine"
  MS_ITEMS            ||--o{ LINII_DOC           : "apare in"
  BRANDS              ||--o{ MS_ITEMS            : "produce"
  ITEMS_CATEGORY      ||--o{ MS_ITEMS            : "clasifica"
  ITEMS_TYPE          ||--o{ MS_ITEMS            : "categoriseaza"
  ITEMS_SEASONS       ||--o{ MS_ITEMS            : "apartine la"
